Containers and box-model

--- a/colours-typography.html
+++ b/colours-typography.html
@@ -28,8 +28,14 @@
   <!-- text decoration & font weight -->
   <p class="text-decoration-underline">this is underlined text</p>
   <p class="text-decoration-line-through">this is line-through text</p>
-  <p class="fw-bold">this bold text</p>
-  <small>this is small text</small>
+  
+  <!-- font weight -->
+  <p class="fw-bold">bold text</p>
+  <p class="fw-bolder">bolder text</p>
+  <p>normal text</p>
+  <p class="fw-light">light text</p>
+  <p class="fst-italic">italic text</p>
+  <p class="fst-italic fw-light">italic light text</p>
 
   <!-- text colours -->
   <p class="text-primary">theme primary colour</p>
