Adding some features

--- a/containers.html
+++ b/containers.html
@@ -27,6 +27,11 @@
     <h2>100% until xl screens, then container</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil dolore doloremque iure corporis, cumque voluptate commodi minus. Accusantium magni ut omnis excepturi cumque! Debitis fugiat cumque nihil corrupti eius facere corporis natus? Cumque numquam vitae ipsam eum quaerat omnis vel corrupti perferendis totam iste quisquam, facere consequuntur aut, ea, doloribus aperiam. Ad eius facilis nulla! Ea optio in corporis ab.</p>
   </div>
+
+  <div class="container w-50">
+    <h2>Controlled width (50%)</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt a laboriosam tenetur beatae adipisci fugiat rem accusantium, sunt numquam mollitia doloribus doloremque ipsa velit illum sed repellendus non, omnis voluptate.</p>
+  </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
