--- a/colours-typography.html
+++ b/colours-typography.html
@@ -36,6 +36,9 @@
   <p class="fw-light">light text</p>
   <p class="fst-italic">italic text</p>
   <p class="fst-italic fw-light">italic light text</p>
+  <p class="fs-1">Font size 1</p>
+  <p class="fs-5">Font size 5</p>
+
 
   <!-- text colours -->
   <p class="text-primary">theme primary colour</p>
