--- a/colours-typography.html
+++ b/colours-typography.html
@@ -29,7 +29,7 @@
   <p class="text-decoration-underline">this is underlined text</p>
   <p class="text-decoration-line-through">this is line-through text</p>
   
-  <!-- font weight -->
+  <!-- font weight font size-->
   <p class="fw-bold">bold text</p>
   <p class="fw-bolder">bolder text</p>
   <p>normal text</p>
