--- a/grid.html
+++ b/grid.html
@@ -1,11 +1,14 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Net Ninja Pro - the Book</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
+
 <body>
 
   <div class="container-lg my-5">
@@ -22,7 +25,7 @@
       </div>
     </div>
   </div>
-
+  
   <div class="container-lg my-5">
     <h2>column widths</h2>
     <div class="row">
@@ -40,7 +43,8 @@
 
   <div class="container-lg my-5">
     <h2>responsive column widths</h2>
-    <div class="row gy-3"> <!-- manually change gutter using g{d}-{n} -->
+    <div class="row gy-3">
+      <!-- manually change gutter using g{d}-{n} -->
       <div class="col-sm-4 col-lg-6">
         <div class="p-5 bg-primary text-light">col 1</div>
       </div>
@@ -55,7 +59,8 @@
 
   <div class="container-lg my-5">
     <h2>justifying columns</h2>
-    <div class="row justify-content-center"><!-- j-c-end, j-c-start, j-c-between, j-c-around -->
+    <div class="row justify-content-center">
+      <!-- j-c-end, j-c-start, j-c-between, j-c-around -->
       <div class="col-md-3">
         <div class="p-5 bg-primary text-light">col 1</div>
       </div>
@@ -67,7 +72,10 @@
       </div>
     </div>
   </div>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
