--- a/grid.html
+++ b/grid.html
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="container-lg my-5">
     <h2>column widths</h2>
     <div class="row">
@@ -59,7 +59,7 @@
 
   <div class="container-lg my-5">
     <h2>justifying columns</h2>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center g-3">
       <!-- j-c-end, j-c-start, j-c-between, j-c-around -->
       <div class="col-md-3">
         <div class="p-5 bg-primary text-light">col 1</div>
