--- a/colours-typography.html
+++ b/colours-typography.html
@@ -11,7 +11,7 @@
   <h1>Boostrap 5 Tutorial</h1>
   <h2>this is an h2</h2>
   <h3>this is an h3</h3>
-  <h2 class="h3">this is an 2 with an h3 class</h2>
+  <h2 class="h3"></h2>
 
   <!-- display headings -->
   <h1 class="display-1">display 1 heading</h1>
