--- a/website/learning.html
+++ b/website/learning.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap_files/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>DevUp Bootstrap</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
